<resources>
    <string name="app_name">CalorieCounter</string>
    <string name="e_mail">E-Mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_you_have_an_account">Don\'t you have an account ?</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="calendar">Calendar</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="foods">Foods</string>
    <string name="add_meal">Add Meal</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="protein">Protein</string>
    <string name="prt">Pro</string>
    <string name="calorie">Calorie</string>
    <string name="details">Details</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fat">Fat</string>
    <string name="foodimage">foodImage</string>
    <string name="how_many_calories">How Many Calories?</string>
    <string name="background">background</string>
    <string name="enter_new_weight">Enter New Weight</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="calorie_goal">Calorie Goal</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_surname">Enter Surname</string>
    <string name="submit">Submit</string>
    <string name="goal">Goal</string>
    <string name="screen1_text">You can follow your diet process and look at the calories of the food you will eat. And completely free…</string>
    <string name="welcome_to_caloriecounter">Welcome to CalorieCounter.</string>
    <string name="next">Next</string>
    <string name="trust_the_process">Trust the process…</string>
    <string name="screen2Text">You can update height, weight from this application. You can determine and follow the daily calorie amount. You can better manage your program</string>
    <string name="secondScreenTitle">Firstly enter your daily calorie goal</string>
    <string name="done">Done</string>
    <string name="kcal">kcal</string>
    <string name="calorie_calendar">Calorie Calendar</string>
    <string name="total_calorie">Total Calorie</string>
    <string name="nextday">nextDay</string>
    <string name="the_before_day">The before day</string>
    <string name="hello">Hello</string>
    <string name="slash">/</string>
    <string name="today_s_summary">Today\'s Summary</string>
    <string name="nothing_here">Nothing here today!</string>
    <string name="add_daily_calorie">Add Daily Calorie</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="eat">Eat!!</string>
    <string name="_0">0</string>
    <string name="empty_box">empty_box</string>
    <string name="x">x</string>
    <string name="profilepic">profilePic</string>
    <string name="profilepicbackground">profilePicBackGround</string>
    <string name="exit">exit</string>
    <string name="welcome">Welcome to CalorieCounter</string>
</resources>