<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.calendar.CalendarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtCalendarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/magra"
            android:text="@string/calorie_calendar"
            android:textColor="@color/secondaryColor"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageLeft"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:contentDescription="@string/the_before_day"
            android:focusable="true"
            android:src="@drawable/left_24"
            app:layout_constraintEnd_toStartOf="@id/txtCalendar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCalendarTitle" />

        <TextView
            android:id="@+id/txtCalendar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="monospace"
            android:text=""
            android:textColor="@color/primaryTextColor"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/imageRight"
            app:layout_constraintStart_toEndOf="@id/imageLeft"
            app:layout_constraintTop_toBottomOf="@id/txtCalendarTitle" />


        <ImageView
            android:id="@+id/imageRight"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/nextday"
            android:src="@drawable/right_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/txtCalendar"
            app:layout_constraintTop_toBottomOf="@id/txtCalendarTitle" />

        <LinearLayout
            android:id="@+id/nothingLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/recyclerView"
            app:layout_constraintTop_toTopOf="@id/recyclerView"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/empty_image_calendar"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:alpha="0.5"
                android:contentDescription="@string/empty_box"
                android:src="@drawable/outline_restaurant_24" />

            <TextView
                android:id="@+id/emptyMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/magra"
                android:text="@string/nothing_here"
                android:textColor="@color/gray"
                android:textSize="20sp" />
        </LinearLayout>



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="121dp"
            android:background="@drawable/rounded_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txtCalendar" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/magra"
            android:text="@string/total_calorie"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/txtTotalCalorie"
            app:layout_constraintTop_toBottomOf="@id/recyclerView" />

        <TextView
            android:id="@+id/txtTotalCalorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="monospace"
            android:text="@string/_0"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/recyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>